--- a/index.html
+++ b/index.html
@@ -17,5 +17,31 @@
 <body>
 
 </body>
-    <h1>Hoang Manh Dung</h1>
+<div class="app">
+    <header class="header sticky">
+        <div class="main-content">
+            <div class="header-body">
+                <a href="#!"><img src="assets/img/lesson..svg" alt="Lesson." class="logo"></a>
+                <nav class="nav">
+                    <ul>
+                        <li class="active">
+                            <a href="#!">Home</a>
+                        </li>
+                        <li>
+                            <a href="#!">Courses</a>
+                        </li>
+                        <li>
+                            <a href="#!">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#!">Reviews</a>
+                        </li>
+                    </ul>
+                </nav>
+                <a href="" class="btn sign-up-btn">Sign Up</a>
+            </div>
+        </div>
+    </header>
+</div>
+
 </html>
