--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 </body>
 <div class="app">
+    <!-- Header -->
     <header class="header sticky">
         <div class="main-content">
             <div class="header-body">
@@ -42,6 +43,66 @@
             </div>
         </div>
     </header>
+
+    <!-- Main --> 
+    <main>
+        <div class="hero">
+            <div class="main-content">
+                <div class="body">
+                    <div class="media-block">
+                        <img src="assets/img/media.png" alt="Learn without limits and spread knowledge." class="img">
+                        <div class="hero-summary">
+                            <div class="item">
+                                <div class="icon">
+                                    <img src="assets/icon/list.svg" alt="List" class="icon-img">
+                                </div>
+                                <div class="infor">
+                                    <p class="label">20 Courses</p>
+                                    <p class="title">UI/UX Design</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="icon">
+                                    <img src="assets/icon/code.svg" alt="Code" class="icon-img">
+                                </div>
+                                <div class="infor">
+                                    <p class="label">20 Courses</p>
+                                    <p class="title">Development</p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="icon">
+                                    <img src="assets/icon/volume.svg" alt="Volume" class="icon-img">
+                                </div>
+                                <div class="infor">
+                                    <p class="label">30 Courses</p>
+                                    <p class="title">Marketing</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-block">
+                        <h1 class="heading">Learn without limits and spread knowledge.</h1>
+                        <p class="desc">Build new skills for that “this is my year” feeling with courses, certificates, and degrees from world-class universities and companies.</p>
+                        <div class="cta-group">
+                            <a href="#!" class="btn hero-btn">See Courses</a>
+                            <button class="hero-button">
+                                <div class="icon">
+                                    <img src="assets/icon/play.svg" alt="Play video" class="icon-img">
+                                </div>
+                                <span>Watch Video</span>
+                            </button>
+                        </div>
+                        <div class="desc">Recent engagement</div>
+                        <div class="desc stats">
+                            <strong>50K</strong> Students
+                            <strong>70+</strong> Courses
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </div>
 
 </html>
