--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                         <div class="cta-group">
                             <a href="#!" class="btn hero-btn">See Courses</a>
                             <button class="hero-button">
-                                <div class="icon">
+                                <span class="icon">
                                     <img src="assets/icon/play.svg" alt="Play video" class="icon-img">
-                                </div>
+                                </span>
                                 <span>Watch Video</span>
                             </button>
                         </div>
