--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         </div>
     </header>
 
-    <!-- Main --> 
+    <!-- Main -->
     <main>
+        <!-- Hero -->
         <div class="hero">
             <div class="main-content">
                 <div class="body">
@@ -82,8 +83,9 @@
                         </div>
                     </div>
                     <div class="content-block">
-                        <h1 class="heading">Learn without limits and spread knowledge.</h1>
-                        <p class="desc">Build new skills for that “this is my year” feeling with courses, certificates, and degrees from world-class universities and companies.</p>
+                        <h1 class="heading lv1">Learn without limits and spread knowledge.</h1>
+                        <p class="desc">Build new skills for that “this is my year” feeling with courses, certificates,
+                            and degrees from world-class universities and companies.</p>
                         <div class="cta-group">
                             <a href="#!" class="btn hero-btn">See Courses</a>
                             <button class="hero-button">
@@ -97,6 +99,94 @@
                         <div class="desc stats">
                             <strong>50K</strong> Students
                             <strong>70+</strong> Courses
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Popular -->
+        <div class="popular">
+            <div class="main-content">
+                <div class="popular-top">
+                    <div class="info">
+                        <h2 class="heading lv2">Our popular courses</h2>
+                        <p class="desc">Build new skills with new trendy courses and shine for the next future career.
+                        </p>
+                    </div>
+                    <div class="controls">
+                        <button class="control-btn">
+                            <svg width="8" height="14" viewBox="0 0 8 14" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M7 1L1 7L7 13" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+
+                        </button>
+                        <button class="control-btn">
+                            <svg width="8" height="14" viewBox="0 0 8 14" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 1L7 7L1 13" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+
+                        </button>
+                    </div>
+                </div>
+                
+                <div class="popular-course">
+                    <div class="course-item">
+                       <a href="#!"> <img src="assets/img/course1.jpg" alt="Basic web design" class="thumb"></a>
+                        <div class="infor">
+                            <div class="infor-head">
+                                <h3 class="title"><a href="#!">Basic web design</a></h3>
+                                <div class="rating">
+                                    <img src="assets/icon/star.svg" alt="Star" class="icon">
+                                    <span>4.5</span>
+                                </div>
+                            </div>
+                            <div class="desc">Get the best course, gain knowledge and shine for your future career.</div>
+                            <div class="infor-foot">
+                                <span class="price">$120.75</span>
+                                <button class="btn btn-book">Book Now</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Course item 2 -->
+                    <div class="course-item">
+                       <a href="#!"> <img src="assets/img/course2.jpg" alt="UI/UX design" class="thumb"></a>
+                        <div class="infor">
+                            <div class="infor-head">
+                                <h3 class="title"><a href="#!">UI/UX design</a></h3>
+                                <div class="rating">
+                                    <img src="assets/icon/star.svg" alt="Star" class="icon">
+                                    <span>4.5</span>
+                                </div>
+                            </div>
+                            <div class="desc">Get the best course, gain knowledge and shine for your future career.</div>
+                            <div class="infor-foot">
+                                <span class="price">$120.75</span>
+                                <button class="btn btn-book">Book Now</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Course item 3 -->
+                    <div class="course-item">
+                       <a href="#!"> <img src="assets/img/course3.jpg" alt="Web App design" class="thumb"></a>
+                        <div class="infor">
+                            <div class="infor-head">
+                                <h3 class="title"><a href="#!">Web App design</a></h3>
+                                <div class="rating">
+                                    <img src="assets/icon/star.svg" alt="Star" class="icon">
+                                    <span>4.5</span>
+                                </div>
+                            </div>
+                            <div class="desc">Get the best course, gain knowledge and shine for your future career.</div>
+                            <div class="infor-foot">
+                                <span class="price">$120.75</span>
+                                <button class="btn btn-book">Book Now</button>
+                            </div>
                         </div>
                     </div>
                 </div>
