--- a/index.html
+++ b/index.html
@@ -126,25 +126,29 @@
                         <button class="control-btn">
                             <svg width="8" height="14" viewBox="0 0 8 14" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 1L7 7L1 13" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M1 1L7 7L1 13" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" />
                             </svg>
 
                         </button>
                     </div>
                 </div>
-                
+
                 <div class="popular-course">
                     <div class="course-item">
-                       <a href="#!"> <img src="assets/img/course1.jpg" alt="Basic web design" class="thumb"></a>
+                        <a href="#!"> <img src="assets/img/course1.jpg" alt="Basic web design" class="thumb"></a>
                         <div class="infor">
                             <div class="infor-head">
-                                <h3 class="title"><a href="#!">Basic web design</a></h3>
+                                <h3 class="title line-clamp"><a href="#!"> Basic web design Basic web design Basic web
+                                        design</a></h3>
                                 <div class="rating">
                                     <img src="assets/icon/star.svg" alt="Star" class="icon">
                                     <span>4.5</span>
                                 </div>
                             </div>
-                            <div class="desc">Get the best course, gain knowledge and shine for your future career.</div>
+                            <div class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine
+                                for your future career.
+                            </div>
                             <div class="infor-foot">
                                 <span class="price">$120.75</span>
                                 <button class="btn btn-book">Book Now</button>
@@ -154,16 +158,18 @@
 
                     <!-- Course item 2 -->
                     <div class="course-item">
-                       <a href="#!"> <img src="assets/img/course2.jpg" alt="UI/UX design" class="thumb"></a>
+                        <a href="#!"> <img src="assets/img/course2.jpg" alt="UI/UX design" class="thumb"></a>
                         <div class="infor">
                             <div class="infor-head">
-                                <h3 class="title"><a href="#!">UI/UX design</a></h3>
+                                <h3 class="title line-clamp"><a href="#!">UI/UX design</a></h3>
                                 <div class="rating">
                                     <img src="assets/icon/star.svg" alt="Star" class="icon">
                                     <span>4.5</span>
                                 </div>
                             </div>
-                            <div class="desc">Get the best course, gain knowledge and shine for your future career.</div>
+                            <div class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine
+                                for your future career.
+                            </div>
                             <div class="infor-foot">
                                 <span class="price">$120.75</span>
                                 <button class="btn btn-book">Book Now</button>
@@ -173,16 +179,18 @@
 
                     <!-- Course item 3 -->
                     <div class="course-item">
-                       <a href="#!"> <img src="assets/img/course3.jpg" alt="Web App design" class="thumb"></a>
+                        <a href="#!"> <img src="assets/img/course3.jpg" alt="Web App design" class="thumb"></a>
                         <div class="infor">
                             <div class="infor-head">
-                                <h3 class="title"><a href="#!">Web App design</a></h3>
+                                <h3 class="title line-clamp"><a href="#!">Web App design</a></h3>
                                 <div class="rating">
                                     <img src="assets/icon/star.svg" alt="Star" class="icon">
                                     <span>4.5</span>
                                 </div>
                             </div>
-                            <div class="desc">Get the best course, gain knowledge and shine for your future career.</div>
+                            <div class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine
+                                for your future career.
+                            </div>
                             <div class="infor-foot">
                                 <span class="price">$120.75</span>
                                 <button class="btn btn-book">Book Now</button>
