--- a/index.html
+++ b/index.html
@@ -146,15 +146,16 @@
                                     <span>4.5</span>
                                 </div>
                             </div>
-                            <div class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine
+                            <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine
                                 for your future career.
-                            </div>
+                            </p>
                             <div class="infor-foot">
                                 <span class="price">$120.75</span>
                                 <button class="btn btn-book">Book Now</button>
                             </div>
                         </div>
                     </div>
+                    
 
                     <!-- Course item 2 -->
                     <div class="course-item">
@@ -167,9 +168,9 @@
                                     <span>4.5</span>
                                 </div>
                             </div>
-                            <div class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine
+                            <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine
                                 for your future career.
-                            </div>
+                            </p>
                             <div class="infor-foot">
                                 <span class="price">$120.75</span>
                                 <button class="btn btn-book">Book Now</button>
@@ -188,13 +189,37 @@
                                     <span>4.5</span>
                                 </div>
                             </div>
-                            <div class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine
+                            <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine
                                 for your future career.
-                            </div>
+                            </p>
                             <div class="infor-foot">
                                 <span class="price">$120.75</span>
                                 <button class="btn btn-book">Book Now</button>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Feedback -->
+        <div class="feedback">
+            <div class="main-content">
+                <div class="feedback-list">
+                    <div class="feedback-item">
+                        <div class="feedback-infor">
+                            <img src="assets/img/blockquote-avatar1.jpg" alt="" class="avatar">
+                            <p class="author">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
+                                <span class="dot"></span>
+                                <span class="dot active"></span>
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img src="assets/icon/open-quote.svg" alt="" class="open-quote">
+                            <blockquote class="quote">Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </blockquote>
                         </div>
                     </div>
                 </div>
