--- a/index.html
+++ b/index.html
@@ -206,15 +206,52 @@
         <div class="feedback">
             <div class="main-content">
                 <div class="feedback-list">
+                    <!-- Feedback 1 -->
                     <div class="feedback-item">
                         <div class="feedback-infor">
                             <img src="assets/img/blockquote-avatar1.jpg" alt="" class="avatar">
                             <p class="author">Peter Moor</p>
                             <p class="desc">Student of Web Design</p>
                             <div class="dots">
+                                <span class="dot active"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img src="assets/icon/open-quote.svg" alt="" class="open-quote">
+                            <blockquote class="quote">Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </blockquote>
+                        </div>
+                    </div>
+
+                    <!-- Feedback 2 -->
+                    <div class="feedback-item">
+                        <div class="feedback-infor">
+                            <img src="assets/img/blockquote-avatar2.jpg" alt="" class="avatar">
+                            <p class="author">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
                                 <span class="dot"></span>
                                 <span class="dot active"></span>
                                 <span class="dot"></span>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img src="assets/icon/open-quote.svg" alt="" class="open-quote">
+                            <blockquote class="quote">Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </blockquote>
+                        </div>
+                    </div>
+
+                    <!-- Feedback 3 -->
+                    <div class="feedback-item">
+                        <div class="feedback-infor">
+                            <img src="assets/img/blockquote-avatar3.jpg" alt="" class="avatar">
+                            <p class="author">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot active"></span>
                             </div>
                         </div>
                         <div class="content">
