--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
 
                     <!-- Course item 2 -->
                     <div class="course-item">
@@ -220,7 +220,9 @@
                         </div>
                         <div class="content">
                             <img src="assets/icon/open-quote.svg" alt="" class="open-quote">
-                            <blockquote class="quote">Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </blockquote>
+                            <blockquote class="quote">Not only does my resume look impressive—filled with the names and
+                                logos of world-class institutions—but these certificates also bring me closer to my
+                                career goals by validating the skills I've learned." </blockquote>
                         </div>
                     </div>
 
@@ -238,7 +240,9 @@
                         </div>
                         <div class="content">
                             <img src="assets/icon/open-quote.svg" alt="" class="open-quote">
-                            <blockquote class="quote">Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </blockquote>
+                            <blockquote class="quote">Not only does my resume look impressive—filled with the names and
+                                logos of world-class institutions—but these certificates also bring me closer to my
+                                career goals by validating the skills I've learned." </blockquote>
                         </div>
                     </div>
 
@@ -256,8 +260,48 @@
                         </div>
                         <div class="content">
                             <img src="assets/icon/open-quote.svg" alt="" class="open-quote">
-                            <blockquote class="quote">Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </blockquote>
+                            <blockquote class="quote">Not only does my resume look impressive—filled with the names and
+                                logos of world-class institutions—but these certificates also bring me closer to my
+                                career goals by validating the skills I've learned." </blockquote>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Features 1 -->
+        <div class="feature">
+            <div class="main-content">
+                <div class="body">
+                    <div class="images">
+                        <img class="slow" src="assets/img/feature-1.jpg" alt="Feature 1">
+                        <img src="assets/img/feature-2.jpg" alt="Feature 2">
+                    </div>
+                    <div class="content">
+                        <h2 class="heading lv2">Learner outcomes through our awesome platform</h2>
+                        <p class="desc">87% of people learning for professional development report career benefits
+                            like getting a promotion, a raise, or starting a new career.</p>
+                        <p class="desc">Lesson Impact Report (2022)</p>
+                        <button class="btn feature-btn">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Feature 2 -->
+        <div class="feature feature-2">
+            <div class="main-content">
+                <div class="body">
+                    <div class="images">
+                        <img src="assets/img/feature-3.jpg" alt="Feature 1">
+
+                    </div>
+
+                    <div class="content">
+                        <h2 class="heading lv2">Take the next step toward your personal and professional goals with
+                            Lesson.</h2>
+                        <p class="desc">Take the next step toward. Join now to receive personalized  and more recommendations from the full Coursera catalog.</p>
+                        <button class="btn feature-btn">Join Now</button>
                     </div>
                 </div>
             </div>
