--- a/index.html
+++ b/index.html
@@ -306,6 +306,114 @@
                 </div>
             </div>
         </div>
+
+        <!-- Blog -->
+        <div class="blog">
+            <div class="main-content">
+                <!-- Blog top -->
+                <div class="blog-top">
+                    <h2 class="heading lv2">Our blog</h2>
+                    <p class="desc">Read our regular travel blog and know the latest update of tour and travel</p>
+                </div>
+
+                <!-- Blog list -->
+                <div class="blog-list">
+                    <!-- Blog 1 -->
+                    <div class="blog-item">
+                       <a href="#!"> <img src="assets/img/blog-thumb-1.jpg" alt="Blog 1" class="thumb"></a>
+                        <div class="content">
+                            <span class="date">21 November 2021</span>
+                            <p class="desc"><a href="#!">How to become a pro web designer in 2022 and get remote job?</a></p>
+                            <button class="btn">Read More</button>
+                        </div>
+                    </div>
+                   <!-- Blog 2 -->
+                   <div class="blog-item">
+                    <a href="#!"> <img src="assets/img/blog-thumb-2.jpg" alt="Blog 1" class="thumb"></a>
+                     <div class="content">
+                         <span class="date">21 November 2021</span>
+                         <p class="desc"><a href="#!">How to become a pro web designer in 2022 and get remote job?</a></p>
+                         <button class="btn">Read More</button>
+                     </div>
+                 </div>
+
+                 <!-- Blog 3 -->
+                 <div class="blog-item">
+                    <a href="#!"> <img src="assets/img/blog-thumb-3.jpg" alt="Blog 1" class="thumb"></a>
+                     <div class="content">
+                         <span class="date">21 November 2021</span>
+                         <p class="desc"><a href="#!">How to become a pro web designer in 2022 and get remote job?</a></p>
+                         <button class="btn">Read More</button>
+                     </div>
+                 </div>
+
+                 <div class="blog-item">
+                    <a href="#!"> <img src="assets/img/blog-thumb-1.jpg" alt="Blog 1" class="thumb"></a>
+                     <div class="content">
+                         <span class="date">21 November 2021</span>
+                         <p class="desc"><a href="#!">How to become a pro web designer in 2022 and get remote job?</a></p>
+                         <button class="btn">Read More</button>
+                     </div>
+                 </div>
+                <!-- Blog 2 -->
+                <div class="blog-item">
+                 <a href="#!"> <img src="assets/img/blog-thumb-2.jpg" alt="Blog 1" class="thumb"></a>
+                  <div class="content">
+                      <span class="date">21 November 2021</span>
+                      <p class="desc"><a href="#!">How to become a pro web designer in 2022 and get remote job?</a></p>
+                      <button class="btn">Read More</button>
+                  </div>
+              </div>
+
+              <!-- Blog 3 -->
+              <div class="blog-item">
+                 <a href="#!"> <img src="assets/img/blog-thumb-3.jpg" alt="Blog 1" class="thumb"></a>
+                  <div class="content">
+                      <span class="date">21 November 2021</span>
+                      <p class="desc"><a href="#!">How to become a pro web designer in 2022 and get remote job?</a></p>
+                      <button class="btn">Read More</button>
+                  </div>
+              </div>
+
+              <div class="blog-item">
+                <a href="#!"> <img src="assets/img/blog-thumb-1.jpg" alt="Blog 1" class="thumb"></a>
+                 <div class="content">
+                     <span class="date">21 November 2021</span>
+                     <p class="desc"><a href="#!">How to become a pro web designer in 2022 and get remote job?</a></p>
+                     <button class="btn">Read More</button>
+                 </div>
+             </div>
+            <!-- Blog 2 -->
+            <div class="blog-item">
+             <a href="#!"> <img src="assets/img/blog-thumb-2.jpg" alt="Blog 1" class="thumb"></a>
+              <div class="content">
+                  <span class="date">21 November 2021</span>
+                  <p class="desc"><a href="#!">How to become a pro web designer in 2022 and get remote job?</a></p>
+                  <button class="btn">Read More</button>
+              </div>
+          </div>
+
+          <!-- Blog 3 -->
+          <div class="blog-item">
+             <a href="#!"> <img src="assets/img/blog-thumb-3.jpg" alt="Blog 1" class="thumb"></a>
+              <div class="content">
+                  <span class="date">21 November 2021</span>
+                  <p class="desc"><a href="#!">How to become a pro web designer in 2022 and get remote job?</a></p>
+                  <button class="btn">Read More</button>
+              </div>
+          </div>
+                
+                 
+                </div>
+
+                <!-- Blog dots -->
+                <div class="dots">
+                    <span class="dot"></span>
+                    <span class="dot active"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+        </div>
     </main>
 </div>
 
