--- a/index.html
+++ b/index.html
@@ -415,6 +415,88 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <div class="footer">
+            <div class="main-content">
+                <!-- Contact -->
+                <div class="row">
+                    <div class="column">
+                        <img src="assets/icon/logo-footer.svg" alt="Lesson." class="logo">
+                        <p class="desc">Need to help for your dream Career? trust us. With Lesson, study becomes a lot easier with us.</p>
+                        <div class="socials">
+                            <a href="#!" class="social-icon">
+                                <img src="assets/icon/social-twitter.svg" alt="" class="icon">
+                            </a>
+                            <a href="#!" class="social-icon">
+                                <img src="assets/icon/social-facebook.svg" alt="" class="icon">
+                            </a>
+                            <a href="#!" class="social-icon">
+                                <img src="assets/icon/social-linkedln.svg" alt="" class="icon">
+                            </a>
+                            <a href="#!" class="social-icon">
+                                <img src="assets/icon/social-insta.svg" alt="" class="icon">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h3 class="heading">Company</h3>
+                        <ul class="list">
+                            <li>
+                                <a class="desc" href="#!">About Us</a>
+                            </li>
+                            <li>
+                                <a class="desc" href="#!">Features</a>
+                            </li>
+                            <li>
+                                <a class="desc" href="#!">Our Pricing</a>
+                            </li>
+                            <li>
+                                <a class="desc" href="#!">Latest News</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="heading">Support</h3>
+                        <ul class="list">
+                            <li>
+                                <a class="desc" href="#!">FAQ’s</a>
+                            </li>
+                            <li>
+                                <a class="desc" href="#!">Terms & Conditions</a>
+                            </li>
+                            <li>
+                                <a class="desc" href="#!">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a class="desc" href="#!">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="heading">Address</h3>
+                        <ul class="list">
+                            <li>
+                                <a class="desc" href="#!"><strong>Location:</strong> 27 Division St, New York, NY 10002, USA</a>
+                            </li>
+                            <li>
+                                <a class="desc" href="#!"><strong>Email:</strong> email@gmail.com</a>
+                            </li>
+                            <li>
+                                <a class="desc" href="#!"><strong>Phone:</strong> + 000 1234 567 890</a>
+                            </li>
+                            
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Copyright -->
+                <div class="copy-right">
+                    <p>Copyright ©2022 webdesign.gdn All rights reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
 
 </html>
